# kingston

./: .replit  CHANGELOG.org  MANIFEST.in  Makefile  README.org  conftest.py  coverage.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  stubgenXXX.txt
.github/workflows/: pythonpackage.yml
conda.recipe/: meta.yaml
docs/: advanced.rst  api.rst  changelog.rst  conf.py  index.rst  install.rst  readme.rst
docs/api/: dig.rst  match.rst
docs/examples/: ormsnackis.rst
examples/: ormsnackis.py  stupidexpr.py
kingston/: LICENSE  __init__.py  aop.py  aop.pyi  bintools.py  build.py  decl.py  decl.pyi  devtool.py  dig.py  dig.pyi  fsm.py  fsm.pyi  kind.py  kind.pyi  lang.py  lang.pyi  lazy.py  lazy.pyi  match.py  match.pyi  microscope.py  microscope.pyi  pipelib.py  pipelib.pyi  primitives.py  primitives.pyi  testing.py  testing.pyi  view.pyi  xxx_kind.py  xxx_kind.pyi
kingston/test/: test_aop.py  test_bintools.py  test_dig.py  test_fsm.py  test_kind_wb.py  test_lang.py  test_lazy_wb.py  test_match_wb.py  test_primitives.py  test_view.py
micropy/: bintools.pyi  dig.py  fsm.pyi  pipelib.py  testing.py  view.py  view.pyi
micropy/test/: test_bintools.py  test_dig.py  test_fsm.py  test_lang.py  test_primitives.py  test_view.py
